syntax = "proto3";

package manager_job;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "manager_job.proto";


service Service {
  // PageJob 分页获取职位信息
  rpc PageJob (PageJobRequest) returns (PageJobReply) {
    option (google.api.http) = {
      get: "/manager/v1/jobs",
    };
  }

  // AddJob 修改职位信息
  rpc AddJob (AddJobRequest) returns (AddJobReply) {
    option (google.api.http) = {
      post: "/manager/v1/job",
      body: "*",
    };
  }

  // UpdateJob 更新职位信息
  rpc UpdateJob (UpdateJobRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/manager/v1/job",
      body: "*",
    };
  }

  // DeleteJob 删除职位信息
  rpc DeleteJob (DeleteJobRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/manager/v1/job",
    };
  }
}